# Kackgammon

./: CMakeLists.txt  README.md
src/: BaseTile.cpp  BaseTile.h  DeadTile.cpp  DeadTile.h  Die.cpp  Die.h  DieCup.cpp  DieCup.h  FinishTile.cpp  FinishTile.h  Game.cpp  Game.h  Gui.cpp  Gui.h  IdPushButton.cpp  IdPushButton.h  Main.cpp  MainWindow.cpp  MainWindow.h  Player.cpp  Player.h  Tile.cpp  Tile.h
